--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Library</string>
     <string name="toast_message">Toast message</string>
+    <string name="titlebar_search_hint">Search</string>
 </resources>
